enforce scrollbar in css to fix shift on long pages
https://forum.freecodecamp.org/t/web-page-shifts-left-or-right-when-clicking-navigation-buttons-twitch-project/152792/2

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+html { overflow-y: scroll; }
 
 a { text-decoration: none; color: #535a61; }
 a:hover { text-decoration: underline; }
